<resources>
    <string name="facebook_app_id">481253435400203</string>
    <string name="app_name">Kandoe</string>
    <string name="reg_already_account">Already an account? Login</string>
    <string name="register_button">Register</string>
    <string name="retype_password">Retype password</string>
    <string name="password_enter">Enter password</string>
    <string name="email_enter">Enter email</string>
    <string name="username_enter">Enter username</string>
    <string name="login_button">Login</string>
    <string name="succes_get_organisation">Organisation HTTP 200</string>
    <string name="edit_user_info">Edit information</string>
    <string name="ic_session_date_desc">Icon Session Date</string>
    <string name="card_image_desc">Card Image</string>
    <string name="kandoe_theme">Kandoes</string>
    <string name="subthemes_theme">Subthemes</string>
    <string name="cards_theme">Cards</string>
    <string name="slogan_app">Free platform for making decisions.</string>
    <string name="or_splash">Or</string>
    <string name="dialog_description">DESCRIPTION</string>
    <string name="ok_dialog">OK</string>
    <string name="dialog_change_password">CHANGE PASSWORD</string>
    <string name="dialog_old_pass">OLD PASSWORD</string>
    <string name="dialog_new_pass">NEW PASSWORD</string>
    <string name="dialog_retype_pass">RETYPE PASSWORD</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="ex_list_organisator">ORGANISATOR</string>
    <string name="loging_enter">Enter email</string>
    <string name="login_enter_pass">Enter password</string>
    <string name="login_login">Login</string>
    <string name="login_or">Or</string>
    <string name="login_noaccount">No account yet? Create one</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="profile_address">Address</string>
    <string name="hint_street">Street</string>
    <string name="hint_nr">Nr</string>
    <string name="hint_city">City</string>
    <string name="hint_zio">Zip</string>
    <string name="profile_save">SAVE</string>
    <string name="profile_edit">EDIT</string>
    <string name="profile_change_pass">Change password</string>
    <string name="session_active_user">(ACTIVE)</string>
    <string name="session_cards">Cards</string>
    <string name="subtheme_kandoes">KANDOES:</string>
    <string name="subtheme_cards">CARDS</string>
    <string name="button_themes">Themes</string>
    <string name="session_active">(ACTIVE)</string>
    <string name="session_detail">Details</string>
    <string name="subthemes_count">Subthemes:</string>
    <string name="profile_picture_content_img">Profielpicture</string>
    <string name="nav_username">Username</string>
</resources>
