<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:text="@string/dialog_change_password"
            android:textSize="25sp"
            android:layout_marginLeft="60dp"
            android:textColor="@color/colorAccent"
            />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText

            android:id="@+id/user_old_password"
            android:layout_width="fill_parent"
            android:layout_height="48sp"
            android:hint="@string/dialog_old_pass"
            android:inputType="textPassword"
            android:paddingBottom="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText

            android:id="@+id/user_new_password"
            android:layout_width="fill_parent"
            android:layout_height="48sp"
            android:hint="@string/dialog_new_pass"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText

            android:id="@+id/user_retype_password"
            android:layout_width="fill_parent"
            android:layout_height="48sp"
            android:hint="@string/dialog_retype_pass"
            android:inputType="textPassword"
            android:paddingBottom="8dp" />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:text="@string/ok_dialog"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/dialog_button_cancel"/>

    </RelativeLayout>

</LinearLayout>