<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/rel_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_set"
            android:padding="10dp">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/ic_session_date_desc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_info" />

                    <TextView
                        android:id="@+id/theme_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"

                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        tools:text="KdG Theme Description" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_set"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/kandoe_theme"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:id="@+id/separator"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_my_kandoes" />

                    <TextView
                        android:id="@+id/theme_sessions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        tools:text="5 total" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_my_kandoes_active" />

                    <TextView
                        android:id="@+id/theme_active_session"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        tools:text="1 active" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rel_subthemes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_set"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/subthemes_theme"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/theme_view_subthemes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_themes" />

                    <TextView
                        android:id="@+id/theme_subthemes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="20sp"
                        tools:text="5 total" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rel_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_set"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme_cards_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/cards_theme"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey" />

            <HorizontalScrollView
                android:id="@+id/hor_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/theme_cards_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ExpandableListView
                android:id="@+id/users_theme_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:paddingTop="5dp">

            </ExpandableListView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
