<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"

    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_set">

        <ImageView
            android:id="@+id/session_theme_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholderdark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_alignTop="@+id/session_theme_image"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/session_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:foregroundGravity="right"
                android:textSize="12sp"
                android:background="@android:color/holo_green_light"
                android:textColor="@android:color/white"
                tools:text="ACTIVE"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/session_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:layout_alignBottom="@+id/session_theme_image"
            android:layout_marginLeft="16dp"
            tools:text="Session Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/session_name"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:stretchColumns="1">

                    <TableRow>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/ic_session_date_desc"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_time" />


                        <LinearLayout android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >


                        <TextView
                            android:id="@+id/session_start_prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/dark_grey"
                            tools:text="Starting in:" />

                        <TextView
                            android:id="@+id/session_starttime"
                            android:layout_width="wrap_content"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:foregroundGravity="left"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/dark_grey"
                            tools:text="12:00AM" />
                        </LinearLayout>
                    </TableRow>
                    <TableRow>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/ic_session_date_desc"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_profile" />


                        <LinearLayout android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                        <TextView
                            android:id="@+id/session_currentuser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"

                            android:paddingRight="2dp"
                            android:paddingTop="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/dark_grey"
                            tools:text="Current User" />

                        <TextView
                            android:id="@+id/session_user_prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingTop="5dp"
                            android:textSize="10sp"
                            android:textColor="@color/green"
                            android:text="@string/session_active" />
                        </LinearLayout>
                    </TableRow>
                </TableLayout>

            <Button
                android:id="@+id/button_session_detail"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_info"
                android:background="@color/light_grey"
                android:drawablePadding="10dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="@string/session_detail"
                android:textSize="12sp"
                android:textColor="@color/dark_grey" />

            </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>